<?xml version="1.0"?>
<package format="2">
  <name>topic_distance</name>
  <version>0.0.0</version>
  <description>Measure distance between 2 topics</description>

  <maintainer email="francois.chataigner@eureact.org">Francois Chataigner</maintainer>

  <license>Eurecat</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rosbag_storage</depend>
  <depend>tf</depend>

</package>
